# VisualizerOfMathematicalFunctions

./: CMakeLists.txt  README.md  buildgraph.cpp  createnewtextedit.cpp  customscrollbar.cpp  customscrollbar.h  customtextedit.cpp  customtextedit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  styleutils.cpp  ui_mainwindow.h  userwidget.cpp  userwidget.h
resources/: resources.qrc
resources/help/: help.css  help.html
resources/style/: mainwindow.qss
